# jwks-router-plugin

./: Cargo.toml  LICENSE  README.md  config.yml  router.yaml  supergraph-schema.graphql
.github/workflows/: ci.yml
src/: jwks_manager.rs  lib.rs  main.rs
src/plugins/: error.rs  jwk_adapter.rs  jwks_plugin.rs  jwt_adapter.rs  mod.rs
tests/: json_key_set_manager_test.rs  jwks.json  jwt_adapter_test.rs
tests/fixtures/: json_web_key_set.rs  mod.rs
xtask/: Cargo.toml
