# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "router-extension-template"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.55"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = { git="https://github.com/apollographql/router.git", tag="v0.9.3" }
apollo-router-core = { git="https://github.com/apollographql/router.git", tag="v0.9.3" }
async-trait = "0.1.52"
jsonwebtoken = "8"
reqwest = {version="0.11.10"}
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.34"
