# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "jwks-router-plugin"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"

[[bin]]
name = "router"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.55"
apollo-router = "1.0.0"
async-trait = "0.1.52"
futures = "0.3.21"
jsonwebtoken = "8"
reqwest = {version="0.11.11"}
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
serde_json_bytes = "0.2.0"
thiserror = "1.0.37"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.34"
